# cardinal

./: Cargo.toml  OPTIMIZATION_COMPARISON.md  OPTIMIZATION_DETAILS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_REFERENCE.md  README.md  TESTING.md  rust-toolchain.toml
cardinal/: .prettierignore  README.md  package-lock.json  package.json
cardinal-native/: Cargo.toml
cardinal-native/src/: main.rs
cardinal-sdk/: Cargo.toml
cardinal-sdk/src/: database.rs  disk_entry.rs  event_flag.rs  event_stream.rs  lib.rs  models.rs  schema.rs  utils.rs
cardinal-sdk/src/fsevent/: event_flag.rs  event_stream.rs  mod.rs
cardinal/src/: App.css  App.jsx  App.tsx  index.js  lib.rs
cardinal/src-tauri/: Cargo.toml
cardinal/src-tauri/src/: commands.rs  lib.rs
cardinal/src/components/: ContextMenu.jsx  FSEventsPanel.jsx  FSEventsPanel.tsx  FileRow.jsx  FileRow.tsx  FilesTabContent.tsx  MiddleEllipsis.jsx  MiddleEllipsisHighlight.jsx  PermissionOverlay.tsx  Scrollbar.jsx  SearchBar.tsx  StatusBar.jsx  VirtualList.jsx  VirtualizedRow.jsx
doc/: TODO.md
fs-icon/: Cargo.toml
fs-icon/src/: lib.rs
fswalk/: Cargo.toml
fswalk/src/: lib.rs  type_and_size.rs
lsf/: Cargo.toml
lsf-tui/src/: main.rs
lsf/src/: cache.rs  main.rs  persistent.rs  query.rs
migrations/2023-02-15-124931_init/: up.sql
namepool/: Cargo.toml
namepool/src/: cache_line.rs  lib.rs
search-cache/src/: cache.rs  lib.rs  persistent.rs  tests_extra.rs
src/: lib.rs  main.rs  processor.rs  utils.rs
src/database/: mod.rs
src/fs_entry/: mod.rs
was/: Cargo.toml
was/src/: main.rs
(+11 files in other folders)
