[package]
name = "fs-icon"
version = "0.1.0"
edition = "2024"

[dependencies]
block2 = "0.6.1"
objc2 = "0.6.2"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSImage", "NSBitmapImageRep", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary"] }
